--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/LevelPrototyping/basicMap.basicMap
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Game/VehicleTemplate/Blueprints/OffroadGameMode.OffroadGameMode_C
+GlobalDefaultGameMode=/Game/ThirdPerson/CustomMode.CustomMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
